feat: improve getRewards performance by using a threadPool and completableFutures parrallele processing